@@ -1,3 +1,15 @@
+jpress v3.2.1:
+新增：模板预览功能，前端可以通过 url 访问指定已经安装的模板
+优化：升级 ckeditor 到最新版本，以支持 word 的复制粘贴功能
+优化：通过 QQ 进行第三方登录时，发生错误提示不明显的问题
+修复：分销用户无法正确获取分销金额的问题
+修复：ArticleService.findListByCategoryId() 的 count 参数不起作用的问题
+修复：通过 paypal 进行支付发生错误的问题
+修复：加购物车返回的 Json 内容不正确的问题，感谢 @一座城你说你不懂
+修复：通过 Github 第三方登录无法获取正确的用户数据的问题
+
+
+
 jpress v3.2.0:
 新增：添加一个全新的插件：留言插件，方便网站使用其增强 "留言" 功能，同时方便新手作为一个参考去开发自己的插件，感谢作者 @安杰
 新增：可以通过 URL 直接访问模板页面的功能，假设存在模板 abc.html，增可以直接通过 http://domain/abc 去访问。
